@@ -13,38 +13,33 @@ public class User {
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
 
-    @Column(nullable = false, unique = true)
-    private String email;
-
     @Column(nullable = false)
     private String name;
-
-    @Column(nullable = false)
-    private String password;
 
     @Column(nullable = false, unique = true)
     private String username;
 
-    @ManyToOne(optional = false)
-    @JoinColumn(name = "role_id")
+    @Column(nullable = false, unique = true)
+    private String email;
+
+    @Column(nullable = false)
+    private String password;
+
+    @ManyToOne(fetch = FetchType.EAGER)
+    @JoinColumn(name = "role_id", nullable = false)
     private Role role;
 
+    @Column(name = "created_at")
     private LocalDateTime createdAt;
 
-    public User() {
-    }
+    public User() {}
 
-    public User(Long id, String email, String name, String password, String username, Role role) {
-        this.id = id;
-        this.email = email;
+    public User(String name, String username, String email, String password, Role role) {
         this.name = name;
-        this.password = password;
         this.username = username;
+        this.email = email;
+        this.password = password;
         this.role = role;
-    }
-
-    @PrePersist
-    public void onCreate() {
         this.createdAt = LocalDateTime.now();
     }
 
@@ -52,20 +47,20 @@ public class User {
         return id;
     }
 
-    public String getEmail() {
-        return email;
-    }
-
     public String getName() {
         return name;
     }
 
-    public String getPassword() {
-        return password;
-    }
-
     public String getUsername() {
         return username;
+    }
+
+    public String getEmail() {
+        return email;
+    }
+
+    public String getPassword() {
+        return password;
     }
 
     public Role getRole() {
@@ -76,26 +71,6 @@ public class User {
         return createdAt;
     }
 
-    public void setId(Long id) {
-        this.id = id;
-    }
-
-    public void setEmail(String email) {
-        this.email = email;
-    }
-
-    public void setName(String name) {
-        this.name = name;
-    }
-
-    public void setPassword(String password) {
-        this.password = password;
-    }
-
-    public void setUsername(String username) {
-        this.username = username;
-    }
-
     public void setRole(Role role) {
         this.role = role;
     }
@@ -104,11 +79,8 @@ public class User {
         this.createdAt = createdAt;
     }
 
-    // PORTAL EXPECTS THIS EXACT SIGNATURE
+    //  PORTAL EXPECTS THIS EXACT METHOD
     public Set<Role> getRoles() {
-        if (this.role == null) {
-            return Collections.emptySet();
-        }
-        return Set.of(this.role);
+        return role == null ? Collections.emptySet() : Set.of(role);
     }
 }
